foolish/foolish-ubcb-cli/src/snapshots/foolish_ubcb_cli__approval_tests__search_constanic_anchored.snap
---
source: foolish-ubcb-cli/src/main.rs
expression: output
---
{b = Search(pattern='^a$', direction=BACKWARD);}
