foolish/foolish-ubcb-cli/src/snapshots/foolish_ubcb_cli__approval_tests__search_resolved_chained.snap
---
source: foolish-ubcb-cli/src/main.rs
expression: output
---
{a = Int(10); b = Search(result=Int(10), pattern='^a$', direction=BACKWARD); c = Search(result=Search(result=Int(10), pattern='^a$', direction=BACKWARD), pattern='^b$', direction=BACKWARD);}
