foolish/foolish-ubcb-cli/src/snapshots/foolish_ubcb_cli__approval_tests__search_resolved_simple.snap
---
source: foolish-ubcb-cli/src/main.rs
expression: output
---
{a = Int(2); b = Search(result=Int(2), pattern='^a$', direction=BACKWARD);}
