foolish/foolish-ubcb-cli/src/snapshots/foolish_ubcb_cli__approval_tests__states_flag_literals.snap
---
source: foolish-ubcb-cli/src/main.rs
expression: output
---
{Int(1) [INDEPENDENT]; Int(2) [INDEPENDENT]; Int(3) [INDEPENDENT];}
