foolish/foolish-ubcb-cli/src/snapshots/foolish_ubcb_cli__approval_tests__states_flag_search_constanic.snap
---
source: foolish-ubcb-cli/src/main.rs
expression: output
---
{Search(pattern='^b$', direction=BACKWARD, anchor="a") [EMBRYONIC];}
