foolish/foolish-ubcb-cli/src/snapshots/foolish_ubcb_cli__approval_tests__states_flag_search_resolved.snap
---
source: foolish-ubcb-cli/src/main.rs
expression: output
---
{a = Int(2) [INDEPENDENT]; b = Search(result=Int(2) [INDEPENDENT], pattern='^a$', direction=BACKWARD) [INDEPENDENT];}
