foolish/foolish-ubcb-cli/src/snapshots/foolish_ubcb_cli__approval_tests__ubcb_test_1_states.snap
---
source: foolish-ubcb-cli/src/lib.rs
expression: output
---
{start = Int(1) [INDEPENDENT]; testˍidentifier = Brane [EMBRYONIC]
  a = 
  Int(1) [INDEPENDENT]
  b = 
  Search(pattern='^a$', dir=BACKWARD, FREE) [ECONSTANIC]; Concatenation(elements=2) [EMBRYONIC]
  Search(pattern='^testˍancestralˍidentifierˍwithˍshadow$', dir=BACKWARD, FREE) [ECONSTANIC]
  Brane [EMBRYONIC]
    a = 
    Int(1) [INDEPENDENT]
    n1 = 
    Brane [EMBRYONIC]
      c = 
      Operator(-) [EMBRYONIC]
        Int(1) [INDEPENDENT]
      b = 
      Search(pattern='^a$', dir=BACKWARD, FREE) [EMBRYONIC]
      a = 
      Int(2) [INDEPENDENT]
      n2 = 
      Brane [EMBRYONIC]
        a = 
        Int(3) [INDEPENDENT]
        b = 
        Search(pattern='^c$', dir=BACKWARD, FREE) [EMBRYONIC]
        d = 
        Operator(-) [EMBRYONIC]
          Search(pattern='^b$', dir=BACKWARD, FREE) [EMBRYONIC]
        e = 
        Operator(+) [EMBRYONIC]
          Operator(+) [EMBRYONIC]
            Operator(+) [EMBRYONIC]
              Search(pattern='^a$', dir=BACKWARD, FREE) [EMBRYONIC]
              Search(pattern='^b$', dir=BACKWARD, FREE) [EMBRYONIC]
            Search(pattern='^c$', dir=BACKWARD, FREE) [EMBRYONIC]
          Search(pattern='^d$', dir=BACKWARD, FREE) [EMBRYONIC]
    a = 
    Search(pattern='^b$', dir=BACKWARD, FREE) [EMBRYONIC]
    b = 
    Int(1) [INDEPENDENT]
    c = 
    Search(pattern='^a$', dir=BACKWARD, FREE) [EMBRYONIC]; Concatenation(elements=2) [EMBRYONIC]
  Search(pattern='^testˍpreservingˍconstanics$', dir=BACKWARD, FREE) [ECONSTANIC]
  Brane [EMBRYONIC]
    a = 
    Search(pattern='^b$', dir=BACKWARD, FREE) [EMBRYONIC]
    b = 
    Int(1) [INDEPENDENT]
    c = 
    Search(pattern='^a$', dir=BACKWARD, FREE) [EMBRYONIC]; Concatenation(elements=2) [EMBRYONIC]
  Search(pattern='^testˍpreservingˍconstanicsˍoverˍshadows$', dir=BACKWARD, FREE) [ECONSTANIC]
  Brane [EMBRYONIC]
    a = 
    Search(pattern='^b$', dir=BACKWARD, FREE) [EMBRYONIC]
    b = 
    Int(1) [INDEPENDENT]
    f = 
    Brane [EMBRYONIC]
      c = 
      Operator(+) [EMBRYONIC]
        Search(pattern='^b$', dir=BACKWARD, FREE) [EMBRYONIC]
        Int(1) [INDEPENDENT]
      a = 
      Int(0) [INDEPENDENT]
      b = 
      Int(0) [INDEPENDENT]
      r = 
      Operator(+) [EMBRYONIC]
        Operator(+) [EMBRYONIC]
          Operator(+) [EMBRYONIC]
            Search(pattern='^a$', dir=BACKWARD, FREE) [EMBRYONIC]
            Search(pattern='^b$', dir=BACKWARD, FREE) [EMBRYONIC]
          Search(pattern='^c$', dir=BACKWARD, FREE) [EMBRYONIC]
        Search(pattern='^d$', dir=BACKWARD, FREE) [EMBRYONIC]
    g = 
    Search(pattern='^f$', dir=BACKWARD, FREE) [EMBRYONIC]
    d = 
    Int(0) [INDEPENDENT]
    r = 
    Search(pattern='^g$', dir=BACKWARD, FREE) [EMBRYONIC];}
